add souad country's

--- a/css/app.css
+++ b/css/app.css
@@ -58,3 +58,9 @@ h2 {
 #barcelona {
     background-color: #800000;
 }
+#Algerie {   
+ background-color: #46B917;
+}
+#Tunisia {   
+ background-color: #89A7A7;
+}
